--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.4.4",
     "embla-carousel-react": "^8.0.0-rc17",
     "ethers": "^6.10.0",
     "lucide-react": "^0.301.0",
